--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,3 @@
 wp-content/themes/corruptedminds/bower_components/*
-wp-content/themes/corruptedminds/js/app.js
-wp-content/themes/corruptedminds/js/app.css
+wp-content/themes/corruptedminds/js/*
+wp-content/themes/corruptedminds/js/*
